Build exe for windows